# universal-media-metadata

./: .gitignore  LICENSE  README.md  example.opf  example.umm  metadata  pyproject.toml  requirements.dyn.txt  requirements.txt  test.py  upgrade.sh  xml
examples/: audio_book.opf  audio_book.umm
umm/: __init__.py  _vars.py
umm/assets/: mapping.json
umm/assets/opf/: 0.0.1.template
umm/assets/schemas/abook/: 0.0.1.schema
umm/assets/templates/opf/: 0.0.1.jinja  0.0.1.template
umm/file/: __init__.py
umm/schema/: __init__.py
